@@ -15,21 +15,23 @@ notifications:
 skip_tags: true
 shallow_clone: true
 
-cache:
-  - C:\strawberry
+platform:
+  - x86
+  - x64
 
+# As of 2017/11, lastest strawberryperl based on perl 5.26 is failing on Win32::Daemon
 install:
-  - if not exist "C:\strawberry" cinst strawberryperl
+  - cinst strawberryperl --version 5.24.2.1
   - set PATH=C:\strawberry\perl\bin;C:\strawberry\perl\site\bin;C:\strawberry\c\bin;%PATH%
   - cd C:\projects\%APPVEYOR_PROJECT_NAME%
   - echo %cd%
-  - cpan Module::Install
-  - cpanm -f --verbose --notest --installdeps .
-  - cpanm -f --verbose --notest Compress::Zlib IO::Socket::SSL LWP::Protocol::https
-  - cpanm -f --verbose --notest Win32::Daemon Win32::Unicode::File
-  - cpanm -f --verbose --notest Parse::EDID DateTime
-  - cpanm -f --verbose --notest Archive::Extract Digest::SHA File::Copy::Recursive
-  - cpanm -f --verbose --notest JSON::PP URI::Escape Net::Ping Parallel::ForkManager
+  - cpan -T Module::Install
+  - cpanm --notest --installdeps .
+  - cpanm --notest Compress::Zlib IO::Socket::SSL LWP::Protocol::https
+  - cpanm --notest Win32::Daemon Win32::Unicode::File
+  - cpanm --notest Parse::EDID DateTime
+  - cpanm --notest Archive::Extract Digest::SHA File::Copy::Recursive
+  - cpanm --notest JSON::PP URI::Escape Net::Ping Parallel::ForkManager
 
 build_script:
   - perl Makefile.PL
