@@ -3,9 +3,6 @@ package FusionInventory::Agent::Task::Inventory::Win32::Users;
 use strict;
 use warnings;
 
-use constant wbemFlagReturnImmediately => 0x10;
-use constant wbemFlagForwardOnly => 0x20;
-
 use English qw(-no_match_vars);
 
 use FusionInventory::Agent::Tools;
@@ -82,7 +79,7 @@ sub _getLocalUsers {
 
     foreach my $object (getWMIObjects(
         moniker    => 'winmgmts:\\\\.\\root\\CIMV2',
-        query      => [ $query ],
+        query      => $query,
         properties => [ qw/Name SID/ ])
     ) {
         my $user = {
@@ -105,7 +102,7 @@ sub _getLocalGroups {
 
     foreach my $object (getWMIObjects(
         moniker    => 'winmgmts:\\\\.\\root\\CIMV2',
-        query      => [ $query ],
+        query      => $query,
         properties => [ qw/Name SID/ ])
     ) {
         my $group = {
@@ -120,19 +117,17 @@ sub _getLocalGroups {
 
 sub _getLoggedUsers {
 
-    my @query = (
+    my $query =
         "SELECT * FROM Win32_Process".
         " WHERE ExecutablePath IS NOT NULL" .
-        " AND ExecutablePath LIKE '%\\\\Explorer\.exe'", "WQL",
-        wbemFlagReturnImmediately | wbemFlagForwardOnly ## no critic (ProhibitBitwise)
-    );
+        " AND ExecutablePath LIKE '%\\\\Explorer\.exe'";
 
     my @users;
     my $seen;
 
     foreach my $user (getWMIObjects(
         moniker    => 'winmgmts:\\\\.\\root\\CIMV2',
-        query      => \@query,
+        query      => $query,
         method     => 'GetOwner',
         params     => [ 'name', 'domain' ],
         name       => [ 'string', '' ],
@@ -185,7 +180,7 @@ sub _getLocalUser {
 
     my @local_users = getWMIObjects(
         moniker    => 'winmgmts:\\\\.\\root\\CIMV2',
-        query      => [ $query ],
+        query      => $query,
         properties => [ qw/Name Domain/ ]
     );
 
